@@ -72,7 +72,7 @@ This file is handled by urpmi: when adding a media from an URL containing a
 password, urpmi will remove the password from the URL written into urpmi.cfg
 and write it in this file.
 
-=item I<< /var/lib/urpmi/installed-through-deps.list >>
+=item I<< /var/lib/rpm/installed-through-deps.list >>
 
 Contains the name of the packages that were selected indirectly, ie not requested by user
 (eg: libxxxN). It is used to detect orphans (try C<urpme --auto-orphans> and see).
